# milansql

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  COMMUNITY.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  INSTALL.md  LICENSE  README.md  WASM_BUILD.md  benchmark_p234.py  big_import.csv  chaos_test.sh  docker-compose.yml  docker-entrypoint.sh  employees.csv  filtered.csv  fix_btree_range.py  fix_compile.py  fix_p5_memlimits.py  fix_p5b.py  fix_rls_compile.py  fix_schema_js.py  fix_show_rls.py  fix_triggers_views.py  fix_union_dedup.py  fix_views2.py  fix_views_fromless.py  jwt.secret  kunden_backup.sql  milansql  milansql.key  milansql_20260528_094556.sql  milansql_server  milansql_test  patch_rls_v2.py  (+9 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml
Formula/: milansql.rb
audit_src/auth/: auth_manager.hpp
audit_src/ddl/: online_ddl.hpp
audit_src/engine/: engine.hpp
audit_src/migration/: migration_manager.hpp
audit_src/mvcc/: transaction_manager.hpp  vacuum.hpp
audit_src/replication/: master_repl.hpp  slave_repl.hpp
audit_src/scheduler/: event_scheduler.hpp
audit_src/security/: audit_log.hpp
audit_src/server/: http_server.hpp
audit_src/timeseries/: timeseries_manager.hpp
audit_src/transaction/: distributed_tx.hpp
audit_src/utils/: date_utils.hpp
audit_src/wal/: checkpoint.hpp  double_write_buffer.hpp
audit_src/wasm/: wasm_bindings.hpp
clients/dotnet/: README.md
clients/dotnet/MilanSQL.Data/: MilanSQL.Data.csproj  MilanSQLCommand.cs  MilanSQLConnection.cs  MilanSQLDataReader.cs  MilanSQLParameter.cs
clients/java/: README.md  pom.xml
clients/js/: README.md  milansql.js  package.json
clients/nodejs/: .npmignore  README.md  index.js  package.json
clients/nodejs/examples/: basic.js
clients/python/: README.md  pyproject.toml  setup.py
clients/python/examples/: basic.py  http_example.py  transactions.py
clients/python/milansql/: __init__.py  connection.py  exceptions.py  http_client.py
clients/react/: Logo.tsx
clients/rust/: Cargo.toml  README.md
clients/rust/src/: connection.rs  error.rs  lib.rs  query.rs  row.rs
deploy/hetzner/: nginx-setup.sh  setup.sh
deploy/kubernetes/: milansql-crd.yaml  milansql-deployment.yaml  milansql-ha.yaml  milansql-service.yaml
docs/: architecture.html  demo.html  impressum.html  index.html  internals.html  sql-reference.html  tutorial.html
docs/landing/: index.html
docs/wasm/: milansql-wasm-shim.js
include/: milansql_embedded.h
packaging/: build-deb.sh
packaging/debian/: control  milansql.service  postinst  prerm
packaging/rpm/: milansql.spec
packaging/windows/: install.ps1  milansql.iss
scripts/: chaos_test.sh  daily-check.sh  push-release.ps1  push-release.sh
src/: dispatch.hpp  dispatch_result.hpp  engine.hpp  http_server.hpp  lock_manager.hpp  main.cpp  mysql_server.hpp  pg_server.hpp  transaction_manager.hpp  vacuum.hpp  wal_recovery.hpp  wasm_bindings.hpp  websocket_server.hpp
src/api/: graphql_server.hpp
src/auth/: auth_manager.hpp  rate_limiter.hpp
src/backup/: backup.hpp
src/bench/: durability_bench.cpp  index_bench.cpp
src/buffer/: buffer_pool.hpp
src/cache/: plan_cache.hpp  query_cache.hpp  statement_cache.hpp
src/cdc/: cdc_manager.hpp
src/compression/: compressor.hpp  dict_compressor.hpp  lz4_compressor.hpp  rle_compressor.hpp  zstd_compressor.hpp
src/concurrent/: atomic_table.hpp  rwlock.hpp
src/config/: runtime_config.hpp
src/copy/: copy_manager.hpp
src/crypto/: master_key.hpp  user_key_manager.hpp
src/cursor/: server_cursor.hpp
src/ddl/: online_ddl.hpp
src/debug/: memory_tracker.hpp
src/document/: document_store.hpp
src/embedded/: embedded_api.cpp
src/engine/: btree.hpp  engine.hpp
src/executor/: hash_join.hpp  indexed_nested_loop.hpp  join_planner.hpp  merge_join.hpp  parallel_executor.hpp
src/extensions/: extension_manager.hpp
src/fdw/: csv_fdw.hpp  foreign_data_wrapper.hpp  http_fdw.hpp
src/federation/: federation_manager.hpp
src/graph/: graph_store.hpp
src/ha/: sentinel.hpp
src/index/: hnsw_index.hpp
src/lb/: load_balancer.hpp
src/lock/: distributed_lock.hpp
src/locking/: lock_manager.hpp
src/logger/: logger.hpp
src/migration/: migration_manager.hpp
src/monitoring/: metrics.hpp  prometheus.hpp
src/mvcc/: transaction_manager.hpp  vacuum.hpp
src/nl/: nl_query.hpp
src/optimizer/: adaptive_stats.hpp  auto_analyze.hpp  cost_model.hpp  dp_planner.hpp  histogram.hpp  join_enumerator.hpp  join_plan_types.hpp  optimizer.hpp  plan_selector.hpp  query_rewriter.hpp  table_stats.hpp
src/parallel/: parallel_executor.hpp
src/parser/: parser.hpp
src/pool/: connection_pool.hpp
src/profiler/: query_profiler.hpp  slow_query_log.hpp
src/pubsub/: pubsub.hpp
src/replication/: binlog.hpp  logical_repl.hpp  master_repl.hpp  repl_state.hpp  slave_repl.hpp
src/routines/: routine_manager.hpp
src/scheduler/: event_scheduler.hpp
src/search/: bm25.hpp  boolean_mode.hpp
src/security/: access_control.hpp  audit_log.hpp  fortress.hpp
src/server/: client.hpp  http_server.hpp  mysql_server.hpp  pg_server.hpp  pool_stats.hpp  server.hpp  websocket_server.hpp
src/spatial/: rtree.hpp  spatial.hpp
src/ssl/: cert_generator.hpp  tls_context.hpp
src/stats/: statistics_manager.hpp
src/storage/: column_store.hpp  column_store_v2.hpp  page.hpp  page_manager.hpp  paged_table.hpp  storage.hpp  toast.hpp
src/tenant/: tenant_manager.hpp
src/tests/: benchmark.cpp  embedded_test.c  fuzz_hardening.cpp  milansql_tests.cpp  sql_fuzzer.cpp  stress_test.cpp  tpch_benchmark.cpp
src/timeseries/: continuous_aggregate.hpp  timeseries_manager.hpp
src/transaction/: distributed_tx.hpp
src/types/: array_type.hpp  vector_type.hpp
src/utils/: connection_string.hpp  csv_utils.hpp  date_utils.hpp  json_utils.hpp
src/wal/: checkpoint.hpp  double_write_buffer.hpp  lsn_manager.hpp  pitr_manager.hpp  pitr_manager_impl.hpp  wal_recovery.hpp
src/wasm/: wasm_bindings.hpp
tools/: amalgamate.py
(+19 files in other folders)
