[package]
name = "milansql"
version = "4.2.0"
edition = "2021"
description = "Pure Rust client for MilanSQL database"
license = "MIT"
repository = "https://github.com/haidari9819-lang/milansql"
keywords = ["database", "sql", "milansql", "client"]
categories = ["database", "network-programming"]
readme = "README.md"
publish = true

[dependencies]
# No external dependencies — pure Rust stdlib only

[dev-dependencies]
# No dev dependencies needed
